Fix spacing issues

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -565,7 +565,6 @@ li
   header .nav-wrapper:has( nav[aria-expanded='true']) nav .nav-hamburger button {
     position: fixed;
     left: 275px;
-    top: 20px;
     z-index: 5;
   }
 
@@ -585,13 +584,18 @@ li
     height: auto;
     left: 0;
     overflow: hidden;
-    padding: var(--spacing-small);
+    padding: var(--spacing-small) var(--spacing-medium);
     position: fixed;
-    width: 288px;
+    width: 272px;
   }
 
   header nav[aria-expanded='true'] .nav-tools-panel--show {
     position: fixed;
+  }
+
+  header nav[aria-expanded='true'] .nav-brand a {
+    left: -16px;
+    position: relative;
   }
 
   header nav .nav-sections {
@@ -605,7 +609,7 @@ li
   header nav .nav-sections ul li {
     font: var(--type-headline-2-default-font);
     letter-spacing: var(--type-headline-2-default-letter-spacing);
-    padding: var(--spacing-small);
+    padding: var(--spacing-small) 0;
   }
 
   header nav .nav-sections ul li a {
